The second and main page the user is directed to
Technically the second because "index.php" is actually the first however the user is only directed to "index.php" first to quickly verify them and then they are sent to "home.html" once verification is complete!

--- a/home.html
+++ b/home.html
@@ -1,10 +1,10 @@
 
 <title>Bromine - Home</title>
 <script>
-	alert("Please disable Javascript since this is a secure private instance of Bromine a service that despite not having a centralised server has principales that apply to most instances which means that it is likely private and secure and having Javascript enabled compromises security due to the amount of exploits which rely on Javascript and don't worry assuming your instance of Bromine isn't heavily modified you shouldn't need Javascript!")
+	alert("Please disable Javascript since this is a secure private instance of Bromine a service that despite not having a centralised server has principales that apply to most instances which means that it is likely private and secure and having Javascript enabled compromises security due to the amount of exploits which rely on Javascript and don't worry assuming your instance of Bromine isn't heavily modified you shouldn't need Javascript and if this message is showing up for you and the site you are using DOES require Javascript then please contact the site administrator ASAP!")
 </script>
-<meta name="description" content="Making the world private one step at a time!">
-<meta name="keywords" content="files,anonymous,private,accountless,tor,proxy,OPSEC">
+<meta name="description" content="This is my Bromine instance!">
+<meta name="keywords" content="word1,word2,word3,etc">
 <meta name="robots" content="index">
 <link rel = "stylesheet" href="styles.css">
 <link type = "image/x-icon" rel="icon" href="favicon.ico">
@@ -12,9 +12,10 @@
 <body class="background">
 <br></br>
 <br></br>
-<p style="color:white;">Making the world private one step at a time</p>
+<p class="site-desc">Be autonomous, Be free!</p>
 <a class="std-btn" href="upload.html">Upload</a>
 <a class="std-btn" href="donate.html">Donate</a>
 <a class="std-btn" href="FAQ.html">FAQ</a>
 <a class="std-btn" href="mailto:example@gmail.com">Contact</a>
 <a class="std-btn" href="Bromine.asc">My PGP Key</a>
+<a class="std-btn" href="https://github.com/nmUnderscore9/bromine">View Source</a>
