A file that contains your FAQ
By default the "FAQ.html" file is actually left blank as every Bromine instance will have different frequently asked questions!

--- a/FAQ.html
+++ b/FAQ.html
@@ -2,4 +2,4 @@
 <link type = "image/x-icon" rel="icon" href="favicon.ico">
 <img src = "favicon.ico" style="width:100px;">
 <body class="background">
-
+<h1 style="color:white;">No FAQ written!</h1>
